--- a/package.json
+++ b/package.json
@@ -9,13 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.5.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/stack": "^7.5.0",
+    "axios": "^1.12.2",
     "expo": "~54.0.20",
+    "expo-asset": "^12.0.9",
+    "expo-font": "^14.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.18.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "babel-preset-expo": "^54.0.6",
     "typescript": "~5.7.2"
   },
   "private": true
