--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
@@ -21,11 +22,15 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.29.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.1.3",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "^4.18.0",
+    "react-native-svg": "^15.14.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
