fix: image picker issue and liquid glass bottom menu for iOS

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.plantoraffay.finly'
+    namespace 'com.raffay.finly'
     defaultConfig {
-        applicationId 'com.plantoraffay.finly'
+        applicationId 'com.raffay.finly'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
