--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.12.2",
     "expo": "~54.0.20",
     "expo-asset": "^12.0.9",
@@ -37,7 +38,8 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.14.0",
-    "react-native-worklets": "^0.6.1"
+    "react-native-worklets": "^0.6.1",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
