feat: onboarding, homepage, categories, import data and profile section features

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "finly",
-    "slug": "finly",
+    "name": "Finly",
+    "slug": "Finly",
     "version": "1.0.0",
     "android": {
       "package": "com.raffay.finly"
