--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finly",
+  "name": "Finly",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -21,6 +21,8 @@
     "axios": "^1.12.2",
     "expo": "~54.0.20",
     "expo-asset": "^12.0.9",
+    "expo-document-picker": "^14.0.7",
+    "expo-file-system": "^19.0.17",
     "expo-font": "^14.0.9",
     "expo-haptics": "^15.0.7",
     "expo-image-picker": "^17.0.8",
