--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-local-authentication": "^17.0.7",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
@@ -47,7 +48,8 @@
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.14.0",
     "react-native-worklets": "^0.6.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
