--- a/app.json
+++ b/app.json
@@ -14,6 +14,17 @@
         "NSPhotoLibraryUsageDescription": "Finly needs access to your photo library to select receipt images.",
         "NSPhotoLibraryAddUsageDescription": "Finly needs permission to save receipt photos to your library."
       }
-    }
+    },
+    "plugins": [
+      "react-native-iap",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "kotlinVersion": "2.1.20"
+          }
+        }
+      ]
+    ]
   }
 }
