--- a/ios/finly.xcodeproj/xcshareddata/xcschemes/finly.xcscheme
+++ b/ios/finly.xcodeproj/xcshareddata/xcschemes/finly.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "finly.app"
+               BuildableName = "Finly.app"
                BlueprintName = "finly"
                ReferencedContainer = "container:finly.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "finly.app"
+            BuildableName = "Finly.app"
             BlueprintName = "finly"
             ReferencedContainer = "container:finly.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "finly.app"
+            BuildableName = "Finly.app"
             BlueprintName = "finly"
             ReferencedContainer = "container:finly.xcodeproj">
          </BuildableReference>
