--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.12.2",
     "expo": "~54.0.20",
     "expo-asset": "^12.0.9",
+    "expo-build-properties": "~1.0.9",
+    "expo-dev-client": "~6.0.18",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
     "expo-font": "^14.0.9",
@@ -39,9 +41,10 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.29.0",
     "react-native-gifted-charts": "^1.4.64",
-    "react-native-iap": "^14.4.35",
+    "react-native-iap": "^14.4.46",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-nitro-modules": "^0.31.9",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
