--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@react-navigation/stack": "^7.5.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.20",
     "expo-asset": "^12.0.9",
+    "expo-av": "^16.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "^18.0.10",
     "expo-dev-client": "~6.0.18",
