--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-local-authentication": "^17.0.7",
+    "expo-notifications": "~0.29.0",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
