--- a/ios/finly.xcodeproj/xcshareddata/xcschemes/finly.xcscheme
+++ b/ios/finly.xcodeproj/xcshareddata/xcschemes/finly.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "Finly.app"
                BlueprintName = "finly"
-               ReferencedContainer = "container:finly.xcodeproj">
+               ReferencedContainer = "container:Finly.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -47,12 +47,12 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "Finly.app"
             BlueprintName = "finly"
-            ReferencedContainer = "container:finly.xcodeproj">
+            ReferencedContainer = "container:Finly.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "Finly.app"
             BlueprintName = "finly"
-            ReferencedContainer = "container:finly.xcodeproj">
+            ReferencedContainer = "container:Finly.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
