--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "ios:dev": "EXPO_PUBLIC_ENV=development expo run:ios",
     "ios:staging": "EXPO_PUBLIC_ENV=staging expo run:ios",
     "ios:prod": "EXPO_PUBLIC_ENV=production expo run:ios",
-    "web": "expo start --web",
     "generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
@@ -35,8 +34,9 @@
     "expo-asset": "^12.0.9",
     "expo-av": "^16.0.7",
     "expo-build-properties": "~1.0.9",
-    "expo-constants": "^18.0.10",
+    "expo-constants": "~18.0.12",
     "expo-dev-client": "~6.0.18",
+    "expo-device": "~8.0.10",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
     "expo-font": "^14.0.9",
@@ -44,7 +44,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-local-authentication": "^17.0.7",
-    "expo-notifications": "~0.29.0",
+    "expo-notifications": "~0.32.15",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
