fix: update app name to Finly AI

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Finly",
+    "name": "Finly AI",
     "slug": "Finly",
     "version": "1.0.0",
     "jsEngine": "hermes",
