--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ios:dev": "EXPO_PUBLIC_ENV=development expo run:ios",
     "ios:staging": "EXPO_PUBLIC_ENV=staging expo run:ios",
     "ios:prod": "EXPO_PUBLIC_ENV=production expo run:ios",
-    "generate-icons": "node scripts/generate-icons.js"
+    "generate-icons": "node scripts/generate-icons.js",
+    "generate-splash": "node scripts/generate-splash.js"
   },
   "dependencies": {
     "@bottom-tabs/react-navigation": "^1.0.2",
@@ -45,7 +46,9 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-local-authentication": "^17.0.7",
     "expo-notifications": "~0.32.15",
+    "expo-quick-actions": "^6.0.0",
     "expo-sharing": "^14.0.7",
+    "expo-splash-screen": "^31.0.12",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
@@ -63,7 +66,7 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.14.0",
-    "react-native-worklets": "^0.6.1",
+    "react-native-worklets": "^0.7.1",
     "react-redux": "^9.1.0",
     "reselect": "^5.1.1"
   },
