--- a/ios/finly/Info.plist
+++ b/ios/finly/Info.plist
@@ -90,7 +90,7 @@
 	<array>
 		<dict>
 			<key>UIApplicationShortcutItemIconType</key>
-			<string>UIApplicationShortcutIconTypeCapturePhoto</string>
+			<string>UIApplicationShortcutIconTypeAudio</string>
 			<key>UIApplicationShortcutItemSubtitle</key>
 			<string>Add with voice</string>
 			<key>UIApplicationShortcutItemTitle</key>
@@ -119,8 +119,8 @@
 			<string>finly.action.add_transaction</string>
 		</dict>
 		<dict>
-			<key>UIApplicationShortcutItemIconType</key>
-			<string>UIApplicationShortcutIconTypeSearch</string>
+			<key>UIApplicationShortcutItemIconSymbolName</key>
+			<string>brain.fill</string>
 			<key>UIApplicationShortcutItemSubtitle</key>
 			<string>Ask anything</string>
 			<key>UIApplicationShortcutItemTitle</key>
