--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -65,3 +65,9 @@ expo.useLegacyPackaging=false
 expo.edgeToEdgeEnabled=true
 
 android.kotlinVersion=2.1.20
+
+# Node.js configuration for React Native/Expo
+# The Node.js path is configured in local.properties as node.executable
+# If you're using nvm, make sure the Node.js directory is in your PATH
+# when running Android Studio, or configure Android Studio's environment
+# to include the Node.js path (Android Studio > Preferences > Build, Execution, Deployment > Build Tools > Gradle > Environment variables)
