--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,10 @@ prepare_react_native_project!
 target 'finly' do
   use_expo_modules!
 
+  # Firebase Analytics with modular headers for Swift compatibility
+  pod 'Firebase/Analytics'
+  pod 'GoogleUtilities', :modular_headers => true
+
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
   else
