--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "reselect": "^5.1.1"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
