fix: android subscriptions, update app state on subscription change

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ android/gradle/wrapper/wrapper/
 android/gradle/wrapper/android/
 android/app/build/
 android/local.properties
+
+android/app/release/
