--- a/ios/finly.xcodeproj/xcshareddata/xcschemes/finly.xcscheme
+++ b/ios/finly.xcodeproj/xcshareddata/xcschemes/finly.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "Finly.app"
                BlueprintName = "finly"
-               ReferencedContainer = "container:Finly.xcodeproj">
+               ReferencedContainer = "container:finly.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,7 +47,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "Finly.app"
             BlueprintName = "finly"
-            ReferencedContainer = "container:Finly.xcodeproj">
+            ReferencedContainer = "container:finly.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "Finly.app"
             BlueprintName = "finly"
-            ReferencedContainer = "container:Finly.xcodeproj">
+            ReferencedContainer = "container:finly.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
