--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "^31.0.12",
     "expo-status-bar": "~3.0.8",
+    "expo-store-review": "~9.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-bottom-tabs": "^1.0.2",
